# nrc-sentiment

./: .gitignore  nrc.py  pyproject.toml  readme.org  sample_freq.txt
notebooks/: simple_cluster.ipynb
