[tool.poetry]
name = "sentiment"
version = "0.1.0"
description = ""
authors = ["Rik Bose <rbose@knox.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.0"
jupyter = "^1.0.0"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
