[tool.poetry]
name = "sentiment"
version = "0.1.0"
description = ""
authors = ["Rik Bose <rbose@knox.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.0"
jupyter = "^1.0.0"
scipy = "^1.7.0"
matplotlib = "^3.4.2"
ipympl = "^0.7.0"
mpl-interactions = "^0.17.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
